# gray-code-rs

./: AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  jekyll-gh-pages.yml
middle/: Cargo.toml  middle_ai.rs
middle/src/: hamcycle.rs  lib.rs  tree.rs  vertex.rs
rect/: Cargo.toml  rect_ai.rs
rect/src/: edge.rs  lib.rs  rectangle.rs  rectangulation.rs  rectangulation2.rs  vertex.rs  wall.rs
